<resources>
    <string name="app_name">CUTRunning</string>

    <!-- AuthActivity -->
    <string name="txt_email_hint">Correo</string>
    <string name="txt_password_hint">Constraseña</string>
    <string name="btn_singIn_text">Registrar</string>
    <string name="btn_login_text">Acceder</string>
    <string name="btn_google_signin">Iniciar</string>
    <string name="txt_udg_suffix">\@gmail.com</string>

    <string name="iniciar">Iniciar</string>
    <string name="detener">Detener</string>

    <!-- RegistrationCompletionActivity -->
    <string name="txtv_email">Email</string>
    <string name="txtv_provider">Provider</string>
    <string name="txt_semester_hint">Semester</string>
    <string name="txt_career_hint">Career</string>
    <string name="txt_cu_hint">C.U.</string>
    <string name="btn_logout_text">Cerrar sesión</string>
    <string name="btn_save_text">Guardar</string>
    <string name="btn_skip_text">Saltar</string>

    <!-- Preferences file -->
    <string name="prefs_file">cutrunning.PREFERENCE_FILE_KEY</string>
    <string name="prefs_email">logged_email</string>
    <string name="prefs_user_name">logged_user_name</string>
    <string name="prefs_user_photo">logged_user_photo</string>

    <!-- Bottom navbar -->
    <string name="item_home">Inicio</string>
    <string name="item_add_training">Contar pasos</string>
    <string name="item_race_management">Gestión de carreras</string>
    <string name="item_achievements">Logros</string>
    <string name="item_clasificacion">Clasificación</string>

    <!-- Navigation Drawer -->
    <string name="item_user">Usuario</string>
    <string name="item_profile">Perfil</string>
    <string name="item_app_info">Informacion sobre la App</string>
    <string name="item_race_managements">Gestión de carreras</string>
    <string name="item_logout">Cerrar sesión</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="item_roles">Roles</string>
    <string name="item_statistics">Estadísticas</string>

    <!-- Nav Header -->
    <string name="txt_welcome">Bienvenido</string>

    <!--  Common  -->
    <string name="search">Buscar</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="add">Agregar</string>
    <string name="update">Actualizar</string>
    <string name="refresh">Refrescar</string>
    <string name="delete">Borrar</string>

    <!--  Race  -->
    <string name="add_new_race">Registro de carrera</string>
    <string name="txt_race_name">Nombre</string>
    <string name="txt_race_description">Descripción</string>
    <string name="txt_race_date">Fecha</string>
    <string name="txt_race_time">Hora</string>
    <string name="txt_race_sede">Sede</string>
    <string name="race_can_finish">En este momento, los usuarios pueden terminar la carrera</string>
    <string name="race_cannot_finish">En este momento, no se puede terminar la carrera</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Speciality_ID_prompt">Selecciona una carrera disponible</string>
    <string name="distance_template">%1$.2f</string>
    <string name="steps_template">%d</string>

    <!--  Txt estadisticas  -->
    <string name="info_calorias_html">&lt;u&gt;¿Cómo lo calculamos? click aquí&lt;/u&gt;</string>

    <!--  mensaje explicación calorias  -->

    <string name="explicacion_calorias">
    <![CDATA[
    <strong>¿Cómo Calculamos las Calorías Quemadas?</strong><br/><br/>" +
            "En nuestra aplicación, estimamos las calorías que has quemado durante tu caminata utilizando una combinación de tu peso, el número total de pasos que has dado, y un promedio establecido de pasos por minuto. Aquí te explicamos paso a paso cómo funciona este cálculo:<br/><br/>" +
            "<strong>1. Pasos por Minuto:</strong> Para simplificar y estandarizar nuestros cálculos, asumimos un ritmo de caminata moderado de <strong>90 pasos por minuto</strong>. Este es un promedio que considera una intensidad moderada, típica de una caminata regular.<br/><br/>" +
            "<strong>2. Tiempo de Actividad:</strong> Convertimos el total de pasos que has dado en el tiempo que has estado activo, dividiendo el número total de pasos por 90 (pasos por minuto) y luego ese resultado lo convertimos a horas. Esto nos da una estimación del tiempo total que has estado caminando.<br/><br/>" +
            "<strong>3. MET (Metabolic Equivalent of Task):</strong> Usamos un valor MET de <strong>3.5</strong> para la caminata moderada. El MET es una unidad que mide el gasto energético de una actividad física en comparación con el reposo. Un MET de 3.5 significa que la caminata quema 3.5 veces más energía que estar en reposo.<br/><br/>" +
            "<strong>4. Cálculo de Calorías:</strong> Finalmente, multiplicamos el valor MET por tu peso en kilogramos y por el tiempo de actividad en horas. Esta operación nos da el total de calorías quemadas durante tu caminata. La fórmula que usamos es: Calorías quemadas = MET × Peso en kg × Tiempo en horas<br/><br/>" +
            "Es importante recordar que este cálculo es una estimación basada en promedios y puede variar dependiendo de factores individuales, como la intensidad exacta de tu caminata, tu metabolismo y otros. Sin embargo, ofrece una buena aproximación del gasto energético durante tus actividades.
    ]]>
    </string>

    <string name="email_validation_title">Registro no permitido</string>
    <string name="email_validation_message">Solo se permite el registro a los usuarios que cuenten con alguno de los correos institucionales proporcionados por la universidad</string>
    <string name="ok">Ok</string>

</resources>
